update external script code

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <body>
 <p> This page has an alert! </p>
-<script>
-    alert("I'm JavaScript!");
-</script>
 <p> Isn't that cool?</p>
+
+<script src="script.js"></script>
+
 </body>
 
 </html>
